<resources>
    <string name="app_name">serene</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="title_activity_orders">Orders</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="get_started">Get Started</string>
    <string name="current_level">Current Level</string>
    <string name="aspiring_monk">Aspiring Monk</string>
    <string name="level_up_in">LEVEL UP IN:</string>
    <string name="settings">Settings</string>
    <string name="_0_focus">0</string>
    <string name="_100_focus">100</string>
    <string name="focus_time">Focus Time:</string>
    <string name="_65">65</string>
    <string name="break_time">Break Time:</string>
    <string name="_15">15</string>
    <string name="_5">5</string>
    <string name="no_of_sessions">No. of sessions:</string>
    <string name="mins">mins</string>
    <string name="_00_00">00:00</string>
    <string name="stop">Stop</string>
    <string name="distracted_baby_description">You have very low attention span and you are easily distracted like a baby. But you know the potential of the human mind and you are ready to work to achieve it</string>
    <string name="testing">Testing</string>
    <string name="_24">24</string>
    <string name="min_left">Min Left</string>
    <string name="calm_in_calamity">Calm in calamity</string>
    <string name="aspiring_monk_description">You suddenly realize that work gets completed faster when you give dedicated time to it. You decide to use this discovery to your advantage</string>
    <string name="calmInCalamityDescription">You have started to realize the motion of restless thoughts in your head and you know you have the power to control it. You have just got the taste of the superpowers that being human brings with</string>
    <string name="glimpseofinnerpeace">Glimpse of inner peace</string>
    <string name="glimpseOfInnerPeaceDescription">Be it giving a corporate presentation or making your bed. You do it with utmost awareness. You hardly used your entire mental faculty for doing one thing at a time and being present in the moment. This new found improved way of life is quite surprising and startling.</string>
    <string name="_40">40</string>
    <string name="usage_statistics">Usage Statistics</string>
    <string name="date1">Date1</string>
    <string name="date2">Date2</string>
    <string name="date3">Date3</string>
    <string name="date4">Date4</string>
    <string name="date5">Date5</string>
    <string name="date6">Date6</string>
    <string name="date7">Date7</string>
    <string name="date8">Date8</string>
    <string name="date9">Date9</string>
    <string name="date10">Date10</string>
    <string name="colon">:</string>
    <string name="time1">Time1</string>
    <string name="time2">Time2</string>
    <string name="time3">Time3</string>
    <string name="time4">Time4</string>
    <string name="time5">Time5</string>
    <string name="time6">Time6</string>
    <string name="time7">Time7</string>
    <string name="time8">Time8</string>
    <string name="time9">Time9</string>
    <string name="time10">Time10</string>
    <string name="Mins">Mins</string>
    <string name="pause">Pause</string>
    <string name="_45">45</string>
    <string name="_20">20</string>
    <string name="_10">10</string>
    <string name="stats">Stats</string>
    <string name="b_monk">B Monk</string>
    <string name="first_page_text">Get ready to unlock the super powers of being human</string>
    <string name="don_t_show_this_message_again">Don\'t show this message again</string>
    <string name="focus_time_running">Focus Time</string>
    <string name="dnd">DND</string>
    <string name="super_mode">Super Mode</string>
    <string name="super_m">Super</string>
    <string name="mode_s">Mode</string>
    <string name="success">Success</string>
    <string name="congratulations_on_level_up">Congratulations on Level Up</string>
    <string name="confirm">Confirm</string>
    <string name="next_level_up_in_10_mins">Next level up in 40 mins</string>
    <string name="level">LEVEL 01</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or_sign_up_using">or Sign Up Using</string>
    <string name="hey_there">HEY THERE !!</string>
    <string name="choose_your_mood">CHOOSE YOUR MoooooD…</string>
    <string name="happy">HAPPY</string>
    <string name="tired">TIRED</string>
    <string name="sad">SAD</string>
    <string name="exhausted">EXHAUSTED</string>
    <string name="anger">ANGER</string>
    <string name="what_do_you_want_to_try">What do you want to try</string>
    <string name="game">GAME</string>
    <string name="music">Music</string>
    <string name="chill">CHILL</string>
    <string name="meditation">MEDITATION</string>
    <string name="exercise">EXERCISE</string>
    <string name="memoir">MEMOIR</string>
    <string name="movies">MOVIES</string>
    <string name="choose_your_language">CHOOSE YOUR LANGUAGE</string>
    <string name="watch_vids">WATCH VIDS</string>
    <string name="jokes">JOKES</string>
    <string name="edm">EDM</string>
    <string name="write_some_best_memories">Write Some Best Memories</string>
    <string name="save">SAVE</string>
    <string name="express_anger">EXPRESS_ANGER</string>
    <string name="express">EXPRESS</string>
    <string name="sunlight">SUNLIGHT</string>
    <string name="or">or</string>
    <string name="new_user_register">New User? Register</string>
    <string name="or_signup_using">or SignUp Using</string>
    <string name="action_settings">Settings</string>
    <string name="action_random">Random</string>
    <string name="title_hint">Activity Name</string>
    <string name="focus_time_duration_hint">Focus Time Duration (in minutes)</string>
    <string name="action_save">Save</string>
    <string name="add_habit">Create Your Habit</string>
    <string name="start_time">Start Time</string>
    <string name="habit_deleted">Habit has been deleted</string>
    <string name="priority_level">Priority Level</string>
    <string name="minutes">minutes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail_habit">ScrollingActivity</string>
    <string name="title_activity_random">Random Habit</string>
    <string name="empty_message">Habit cannot be empty</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_key_dark" translatable="false">key_dark_mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="pref_key_notify">key_notification</string>
    <string name="pref_notify_name">Notification</string>
    <string name="pref_notify_summary">Reminder when countdown has finished.</string>
    <string name="notify_channel_name">Habit Reminder</string>
    <string name="notify_content">Time Up!</string>
    <string name="action_sort">sort</string>
    <string name="filter_start_time">By Start Time</string>
    <string name="filter_minutes_focus">By Minutes Focus</string>
    <string name="filter_title_name">By Title Name</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="start">Start</string>
    <string name="open_count_down">Open Count Down</string>
    <string name="question_one">1/10</string>
    <string name="question_two">2/10</string>
    <string name="question_three">3/10</string>
    <string name="question_four">4/10</string>
    <string name="question_five">5/10</string>
    <string name="question_six">6/10</string>
    <string name="question_seven">7/10</string>
    <string name="question_eight">8/10</string>
    <string name="question_nine">9/10</string>
    <string name="question_ten">10/10</string>
    <string name="m_j">Mood Journal</string>
    <string name="a_t">Assessment</string>
    <string name="h_m">My History</string>
    <string name="s_s">Stress Tracker</string>
    <string name="e_m">Expert Support</string>
    <string name="m_e">Counsellor Details</string>
    <string name="a_b">Make Appointments</string>
    <string name="a_h">Appointments</string>
    <string name="m_c">Meet Your Counsellor</string>
    <string name="m_mj">My Journey</string>
    <string name="m_t">Tools</string>
    <string name="pr">Profile</string>
    <string name="qi">Monthly Assessment</string>
    <string name="journal_main">journal</string>
    <string name="journal_second">add journal</string>
    <string name="journal_third">summary</string>
    <string name="app_id">bc2dee0ada4f4c27b6ebd503c1b79161</string>
    <string name="agora_token">007eJxTYCiuf/HvwcOeM5eeJG7Y8pvXr57DPrZ+nv0O72/8J9wP1vIoMCQlG6WkphokpiSapJkkG5knmaUmpZgaGCcbJplbGpoZXllgmNIQyMjw9IcNMyMDBIL4bAypFQWpRSUMDACdXSO8</string>
    <string name="start_up_message">Make yourself\nmore on time</string>
    <string name="notification">Notification</string>
    <string name="schedule">Schedule</string>
    <string name="note">Note</string>
    <string name="search_notes">Search Notes</string>
    <string name="pin">Pin</string>
    <string name="note_settings">Note Settings</string>
    <string name="title">Title</string>
    <string name="text">Your text</string>
    <string name="enter_title">Title</string>
    <string name="save_schedule">save schedule</string>
    <string name="full_day">Full Day</string>
    <string name="start_from">Start from</string>
    <string name="finish">Finish</string>
    <string name="repeat">Repeat</string>
    <string name="reminder">Reminder</string>
    <string name="place">Place</string>
    <string name="pick_date">Pick a Date</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="empty_notifications_list">No Upcoming Schedules</string>
    <string name="empty_schedule_list">You have nothing schedule</string>
    <string-array name="reminders">
        <item>On Time</item>
        <item>Before 5 Minutes</item>
        <item>Before 10 Minutes</item>
    </string-array>
    <string name="do_yoga">Do Yoga</string>
    <string name="do_meditation">Do Meditation</string>
    <string name="read_book">Reading</string>
    <string name="do_walk">Walk</string>
    <string name="a_g">Create Goal</string>
    <string name="a_gm">Academic Related Tasks</string>
    <string name="h_s">Habit Setting</string>
    <string name="g_l">Fix Your Mood</string>
    <string name="a_j"> Write Your Journal</string>
    <string name="s_m">Select Your Mood</string>
    <string name="c_d">Career Development</string>
    <string name="s_r">Social Relationship</string>
    <string name="f_m">Financial Management</string>
    <string name="t_m">Time Management</string>
    <string name="h_d">Select Habit Type</string>
    <string name="y_h">Your Progress</string>
    <string name="m_q">Monthly Assessment</string>
    <string name="f_y">Future You</string>
    <string name="me">Meditation</string>
</resources>