<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight='1'
    android:gravity=""

    android:padding="30dp"
   >

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/title_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_title"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_medium"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/modifiedEditText"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/focus_time_duration_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_minutes_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:fontFamily="@font/montserrat_medium"
            android:background="@color/white"
            android:inputType="number"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/sp_priority_level"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:entries="@array/priority_level"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            style="@style/Base.Widget.AppCompat.ImageButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_time"
            android:onClick="showTimePicker"
            android:drawableTint="@color/blue3"
            android:src="@drawable/ic_access_time_black_24dp"
            android:fontFamily="@font/montserrat_medium"
            tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/add_tv_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/start_time" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:onClick="addCalendarEvent"
        android:text="Remind Me"

        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_habit"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"

        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:onClick="addCalendarEvent"
        android:text="Save" />

    <!--    <ImageView-->
<!--        android:id="@+id/imageView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:alpha="0.3"-->
<!--        app:srcCompat="@drawable/yoga3" />-->

</LinearLayout>