<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.serene.moods.SelectMood"
    >


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"

        app:layout_constraintVertical_bias="0"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logout_choosemood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1"

        android:clickable="true"
        android:focusable="true"
        android:layout_margin="10dp"

        />
    <TextView
        android:fontFamily="@font/montserrat_medium"
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:padding="2dp"
        android:textSize="20sp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_text"
        android:text="@string/hey_there"
        />
    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_mood"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        />
    <ScrollView
        android:id="@+id/sl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <LinearLayout
            android:id="@+id/ll_moods"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="80dp"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/card_happy"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"

                android:backgroundTint="@color/Happy">

                <ImageView
                    android:layout_width="108dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/happy"
                    android:clickable="true"
                    />

                <TextView
                    android:id="@+id/happyy"
                    android:layout_width="232dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="end"
                    android:layout_marginStart="230dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:padding="12dp"
                    android:text="@string/happy"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"

                    android:text="happy" />

                <!--                <ImageButton-->
<!--                    android:id="@+id/imageButton"-->
<!--                    android:layout_width="38dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    app:srcCompat="@drawable/ic_check" />-->


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_sad"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="@color/Happy">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/happy"
                    android:scaleType="centerCrop"

                    />


                <ImageView
                    android:layout_width="118dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/montserrat_medium"
                    android:padding="12dp"
                    android:text="@string/sad"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="sad" />


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/card_tired"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="@color/Happy">

                <ImageView

                    android:layout_width="104dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/happy"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="12dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/sad"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="200dp"
                    android:scaleType="centerCrop"
                     />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="angry" />


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/card_anger"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                app:cardMaxElevation="15dp"
                app:cardPreventCornerOverlap="true"
                android:backgroundTint="@color/Happy">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"/>
<!--                    android:src="@drawable/sleeping" />-->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="200dp"
                    android:src="@drawable/happy"


                    />

                <TextView
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="@font/montserrat_medium"
                    android:padding="12dp"
                    android:text="@string/anger"
                    android:textColor="@color/black"
                    android:textSize="40sp"

                    />



            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>